--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -23,6 +23,7 @@
     min-width: 275px;
     color: $browser_text;
     background-color: $milkWhite_bg;
+    max-width: 502px;
 
     .inputBoxVal {
       visibility: hidden;
