--- a/pages/PartnerMatchProfile/Components/MatchingDetails.module.scss
+++ b/pages/PartnerMatchProfile/Components/MatchingDetails.module.scss
@@ -1,94 +1,104 @@
 @import "../../../styles/constants.scss";
 
-.MainWrapper{
-    background-color: #fff;
-    height: 100vh;
+.MainWrapper {
+  background-color: #fff;
+  height: 100vh;
+  width: 100%;
+  padding: 28px;
+
+  h3 {
     width: 100%;
-    padding: 28px;
+    text-align: center;
+    color: #dc3545;
+    font-weight: 500;
+  }
+  .ComparisonMain {
+    background-color: #f2f2f2;
+    width: 100%;
+    display: flex;
+    height: 30rem;
+    margin-top: 2rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
-    h3{
-        width: 100%;
+    .ComparisonProfileInfo {
+      width: 40%;
+      height: 100%;
+      //   background-color: #fff;
+      p{
+        padding: 4px 20px;
+        box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
+        div{
+            height: 10px;
+            width: 10px;
+            display: inline-block;
+            background-color: #000000;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+      }
+    }
+    .ComparisonProfile1 {
+      width: 30%;
+      height: 100%;
+      position: relative;
+      background-color: #dc3545;
+      p{
         text-align: center;
-        color: #dc3545;
-        font-weight: 500;
-    }
-    .ComparisonMain{
-        background-color: #f2f2f2;
-        width: 100%;
-        display: flex;
-        height: 30rem;
-        margin-top: 2rem;
+      }
 
-        .ComparisonProfile1{
-            width: 45%;
-            height: 100%;
-            position: relative;
-            .ComparisonProfile{
-                width: 120px;
-                height: 120px;
-                object-fit: contain;
-                border-radius: 50%;
-                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-                margin-top: -3rem;
-                margin-left: 1rem;
-                z-index: 10;
-                position: relative;
-            }
-            h4{
-                position: absolute;
-                top: 0rem;
-                right:0rem;
-                background-color: #3366CC;
-                border-radius: 10px;
-                width: 70%;
-                padding: 5px;
-                text-align: right;
-                color: #fff;
-                font-weight: 500;
-                font-size: 18px;
-                border-top-right-radius: 0%;
-                border-bottom-right-radius: 0%;
-                z-index: 1px;
-            }
-        }
-        .ComparisonProfileInfo{
-            width: 10%;
-            height: 100%;
-            background-color: #fff;
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        }
-        .ComparisonProfile2{
-            width: 50%;
-            height: 100%;
-            position: relative;
-            .ComparisonProfile{
-                width: 120px;
-                height: 120px;
-                object-fit: contain;
-                border-radius: 50%;
-                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-                margin: auto;
-                margin-top: -3rem;
-                right: 1rem;
-                z-index: 10;
-                position: absolute;
-            }
-            h4{
-                position: absolute;
-                top: 0rem;
-                left:0rem;
-                background-color: #3366CC;
-                border-radius: 10px;
-                width: 70%;
-                padding: 5px;
-                color: #fff;
-                font-weight: 500;
-                font-size: 18px;
-                border-top-left-radius: 0%;
-                border-bottom-left-radius: 0%;
-                z-index: 1px;
-            }
-        }
+      .ComparisonProfile {
+        width: 120px;
+        height: 120px;
+        object-fit: contain;
+        border-radius: 50%;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        margin-top: -3rem;
+        margin-left: 1rem;
+        z-index: 10;
+        position: relative;
+      }
+      h4 {
+        border-radius: 10px;
+        padding: 5px;
+        text-align: center;
+        color: #000000;
+        font-weight: 500;
+        font-size: 18px;
+      }
     }
-    
+    .ComparisonProfile2 {
+      width: 30%;
+      height: 100%;
+      position: relative;
+      background-color: cornsilk;
+      .ComparisonProfile {
+        width: 120px;
+        height: 120px;
+        object-fit: contain;
+        border-radius: 50%;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        margin: auto;
+        margin-top: -3rem;
+        right: 1rem;
+        z-index: 10;
+        position: absolute;
+      }
+      h4 {
+        border-radius: 10px;
+        text-align: center;
+        padding: 5px;
+        color: #000000;
+        font-weight: 500;
+        font-size: 18px;
+      }
+    }
+    h4 {
+      border-radius: 10px;
+      padding: 5px;
+      text-align: center;
+      color: #000000;
+      font-weight: 500;
+      font-size: 18px;
+    }
+  }
 }
