create sarchpageresult and impliment data on this page . update csc in result card

--- a/pages/ProfileMatch/ProfileMatch.module.scss
+++ b/pages/ProfileMatch/ProfileMatch.module.scss
@@ -3,15 +3,25 @@
 .background_header {
   background: url("../../public/Images/cover-image-register.jpg") no-repeat
     center center;
-  padding: 3rem 0 15rem 0;
+  padding: 3rem  0;
   background-size: cover;
+  height: 22rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  h3{
+    color: #fff;
+    text-transform: capitalize;
+    text-align: center;
+  }
 }
 
 .bg {
   background: rgb(231, 230, 230);
 
   .card_container {
-    width: 80%;
+    width: 75%;
     margin: auto;
   }
 }
@@ -19,7 +29,7 @@
 @media only screen and (max-width: 1091px) and (min-width: 992px) {
     .bg {
         .card_container {
-          width: 90%;
+          width: 76%;
         }
       }
 }
