--- a/pages/PartnerMatchProfile/Components/MatchingDetails.module.scss
+++ b/pages/PartnerMatchProfile/Components/MatchingDetails.module.scss
@@ -2,7 +2,7 @@
 
 .MainWrapper {
   background-color: #fff;
-  height: 100vh;
+  height: auto;
   width: 100%;
   padding: 28px;
 
@@ -16,7 +16,6 @@
     background-color: #f2f2f2;
     width: 100%;
     display: flex;
-    height: 30rem;
     margin-top: 2rem;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
@@ -24,16 +23,16 @@
       width: 40%;
       height: 100%;
       //   background-color: #fff;
-      p{
+      p {
         padding: 4px 20px;
         box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
-        div{
-            height: 10px;
-            width: 10px;
-            display: inline-block;
-            background-color: #000000;
-            border-radius: 50%;
-            margin-right: 10px;
+        div {
+          height: 10px;
+          width: 10px;
+          display: inline-block;
+          background-color: #000000;
+          border-radius: 50%;
+          margin-right: 10px;
         }
       }
     }
@@ -42,7 +41,7 @@
       height: 100%;
       position: relative;
       background-color: #dc3545;
-      p{
+      p {
         text-align: center;
       }
 
