update ui of shortlist with no user , update the matching logic of matchmatking

--- a/components/MyProfile/MyProfileCard.module.scss
+++ b/components/MyProfile/MyProfileCard.module.scss
@@ -196,7 +196,6 @@
     }
 
     .cardInfo {
-
       // .UserName_Section {
       //     min-height: 50px;
       // }
@@ -246,6 +245,7 @@
 
         .mobileAvatar {
           width: 200px;
+          height: 200px;
           margin: 0 auto;
           border-radius: 100%;
           border: 8px solid #fff;
