--- a/components/ShortVisitorProfile/ShortVisitorProfile.module.scss
+++ b/components/ShortVisitorProfile/ShortVisitorProfile.module.scss
@@ -1,52 +1,53 @@
 @import "../../styles/constants.scss";
 
 .cardWrapper {
-    margin: 3rem auto;
-    width: 75%;
-    height: 10rem;
+  margin: 3rem auto;
+  width: 75%;
+  min-height: 20rem;
 
-    .maincard {
-        min-height: 15rem;
-        width: 100%;
-        background-color: #fff;
-        position: absolute;
-        top: -7rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  .maincard {
+    min-height: 15rem;
+    width: 100%;
+    background-color: #fff;
+    position: absolute;
+    top: -7rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    gap: 1rem;
+    padding: 2rem;
+    border-radius: 10px;
 
-        h1 {
-            color: #dc3545;
-            font-size: 2rem;
-        }
-
-        p {
-            font-size: inherit;
-        }
+    h1 {
+      color: #dc3545;
+      font-size: 2rem;
+      margin: 0%;
+      font-weight: 600;
     }
+
+    p {
+      margin: 0%;
+      font-size: small;
+      color: #8a7f7f;
+      font-weight: 600;
+    }
+  }
 }
 
-
-
-
-
 @media screen and (max-width: 300px) {
+  .cardWrapper {
+    width: 95%;
 
-    .cardWrapper {
-        width: 95%;
+    .maincard {
+      h1 {
+        font-size: 1.5rem;
+      }
 
-        .maincard {
-            h1 {
-                font-size: 1.5rem;
-            }
-
-            p {
-                font-size: inherit;
-            }
-        }
+      p {
+        font-size: inherit;
+      }
     }
-
-
+  }
 }
