--- a/pages/PartnerMatchProfile/Components/MatchingDetails.module.scss
+++ b/pages/PartnerMatchProfile/Components/MatchingDetails.module.scss
@@ -13,11 +13,14 @@
     font-weight: 500;
   }
   .ComparisonMain {
-    background-color: #f2f2f2;
+    background-color: #ffffff;
     width: 100%;
     display: flex;
     margin-top: 2rem;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    // box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    height: auto;
+    border-radius: 10px;
+    padding: 1rem;
 
     .ComparisonProfileInfo {
       width: 40%;
