hide name and profile photo based on privacy photo

--- a/components/ProfileCard/ProfileCard.module.scss
+++ b/components/ProfileCard/ProfileCard.module.scss
@@ -43,6 +43,10 @@
         margin: 0% auto;
         margin-bottom: 0.7rem;
         text-transform: capitalize !important;
+
+        span{
+          font-weight: 100;
+        }
       }
 
       .name_Heading::after {
