--- a/pages/SearchPage/Search.module.scss
+++ b/pages/SearchPage/Search.module.scss
@@ -52,11 +52,12 @@
   }
 
   .Search_body {
-    border-radius: 2px;
-    border: 1px solid #ddd;
     background: #fff;
-    padding: 3.5rem 0;
+    padding: 2rem;
     text-align: center;
+    background-color: #ffffff;
+    margin: auto;
+    border-radius: 5px;
 
     .SectionHeading {
       text-align: center;
