fixes all interest block and shortlist issue apply bullor image based on privacy and work on ui of card and invitaions-recive card

--- a/components/ShortVisitorProfile/ShortVisitorProfile.module.scss
+++ b/components/ShortVisitorProfile/ShortVisitorProfile.module.scss
@@ -36,6 +36,17 @@
   }
 }
 
+@media screen and (max-width: 415px) {
+  .cardWrapper {
+  
+
+    .maincard {
+      img{
+        width: 100%;
+      }
+    }
+  }
+}
 @media screen and (max-width: 300px) {
   .cardWrapper {
     width: 95%;
