--- a/components/InterestComponent/InterestRecivedCard.module.scss
+++ b/components/InterestComponent/InterestRecivedCard.module.scss
@@ -21,6 +21,16 @@
     margin: 0 auto;
   }
 
+  table {
+    tbody {
+      tr {
+        td {
+          text-transform: capitalize;
+        }
+      }
+    }
+  }
+
   .profileInfoSec {
     display: flex;
     flex-direction: column;
@@ -41,10 +51,6 @@
     }
   }
 
-  //   .InterestBtnGroup{
-  //     display: flex;
-  //     flex-wrap: wrap;
-  //   }
   .InterestBtnGroup {
     display: flex;
     gap: 10px;
@@ -55,17 +61,18 @@
       display: flex;
       gap: 5px;
       align-items: center;
-      color: black;
       font-weight: 600;
       border: none;
       outline: none;
       font-size: 14px;
       border-radius: 30px;
       height: 36px;
+      color: rgb(5 5 5 / 73%);
 
       svg {
         height: 20px;
         width: 20px;
+        color: rgb(5 5 5 / 73%);
       }
       .loginSpiner {
         height: 20px;
@@ -77,17 +84,9 @@
 
     .acceptBtn {
       background-color: rgb(205 240 212 / 81%);
-      color: rgb(5 5 5 / 73%);
-      svg {
-        color: rgb(5 5 5 / 73%);
-      }
     }
     .declineBtn {
-        background: #dc354517;
-      color: rgb(5 5 5 / 73%);
-      svg {
-        color: rgb(5 5 5 / 73%);
-      }
+      background: #dc354517;
     }
     .acceptBtn:hover {
       color: #19ac23;
@@ -95,6 +94,14 @@
         rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
       svg {
         color: #19ac23;
+      }
+    }
+    .declineBtn:hover {
+      color: #dc3545;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+        rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+      svg {
+        color: #dc3545;
       }
     }
 
@@ -109,5 +116,28 @@
     .activebtn:hover {
       color: #fff;
     }
+  }
+}
+
+@media only screen and (max-width: 1124px) {
+  .card_container {
+    width: 47%;
+  }
+}
+
+@media only screen and (max-width: 767px) and (min-width: 601px) {
+  .card_container {
+    width: auto;
+  }
+}
+
+@media only screen and (max-width: 600px) and (min-width: 350px) {
+  .card_container {
+    width: auto;
+  }
+}
+@media only screen and (max-width: 350px) {
+  .card_container {
+    width: auto;
   }
 }
