--- a/pages/ShowInterest/ShowInterest.module.scss
+++ b/pages/ShowInterest/ShowInterest.module.scss
@@ -51,12 +51,25 @@
   }
 }
 
+@media only screen and (max-width: 1124px) {
+  .search_main {
+    .tabSection {
+      margin: auto;
+      margin-top: -10rem;
+      transform: translateX(-0%);
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+      overflow-x: auto;
+      position: initial;
+    }
+  }
+}
 @media only screen and (max-width: 424px) {
   .search_main {
     .tabSection {
+      gap: 1rem;
       margin-top: -13rem;
-      transform: translateX(-45%);
-      left: 49%;
+      width: 90%;
     }
   }
 }
@@ -64,9 +77,7 @@
 @media only screen and (max-width: 300px) {
   .search_main {
     .tabSection {
-        margin-top: -13rem;
-        transform: translateX(-45%);
-        left: 49%;
+      margin-top: -13rem;
     }
   }
 }
