--- a/pages/PartnerMatchProfile/Components/MatchingDetails.module.scss
+++ b/pages/PartnerMatchProfile/Components/MatchingDetails.module.scss
@@ -22,6 +22,20 @@
     border-radius: 10px;
     padding: 1rem;
 
+    table{
+      min-width: 100%;
+      thead{
+        tr{
+          text-transform: capitalize;
+        }
+      }
+      tbody{
+        tr{
+          text-transform: capitalize;
+        }
+      }
+    }
+
     .ComparisonProfileInfo {
       width: 40%;
       height: 100%;
