--- a/components/ImageGallery/ImageGallery.module.scss
+++ b/components/ImageGallery/ImageGallery.module.scss
@@ -65,6 +65,22 @@
       margin-top: 1rem;
     }
   }
+
+  .galleryProcted{
+    height: 20rem;
+    width: 100%;
+    // background-color: bisque;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+
+    .protectedGalleryImg{
+      width: 200px;
+      height: 200px;
+    }
+  }
 }
 
 .addbtn {
