--- a/pages/ShowInterest/Components/Interest.module.scss
+++ b/pages/ShowInterest/Components/Interest.module.scss
@@ -11,15 +11,15 @@
   background: rgb(231, 230, 230);
 }
 
-.card_container_main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 5px;
-  width: 75%;
-  margin: auto;
-  max-width: 1000px;
-}
+// .card_container_main {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   border-radius: 5px;
+//   width: 75%;
+//   margin: auto;
+//   max-width: 1000px;
+// }
 
 .flexrowMar {
   flex-direction: row;
