update interest ui , apply logic of CSC , some responsive work related to card placement and confirmations popup

--- a/pages/ShowInterest/ShowInterest.module.scss
+++ b/pages/ShowInterest/ShowInterest.module.scss
@@ -12,7 +12,7 @@
 }
 
 .search_main {
-  padding-top: 2rem;
+  // padding-top: 2rem;
   position: relative;
 
   .tabSection {
@@ -27,7 +27,7 @@
     margin-bottom: 1rem;
     justify-content: center;
     position: absolute;
-    margin-top: -9rem;
+    margin-top: -7rem;
     transform: translateX(50%);
     right: 51%;
 
