--- a/components/ConfirmationsPopup/Confirmaton.module.scss
+++ b/components/ConfirmationsPopup/Confirmaton.module.scss
@@ -2,8 +2,8 @@
   height: 100vh;
   position: fixed;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  // height: 100%;
   background: hsl(0deg 0% 0% / 70%);
   z-index: 9999;
   display: flex;
@@ -11,7 +11,7 @@
   align-items: center;
 
   .ResetForm {
-    width: 35%;
+    // width: 35%;
     margin: 0 auto;
     padding: 1.5rem !important;
     border-radius: 7px;
