--- a/components/ProfileCard/ProfileCard.module.scss
+++ b/components/ProfileCard/ProfileCard.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   gap: 1px;
   max-width: 1000px;
-  width: 75%;
+  min-width: 75%;
 
   .profileSection {
     flex-basis: 25%;
@@ -249,9 +249,84 @@
   }
 }
 
-@media only screen and (max-width: 1020px) and (min-width: 768px) {
+@media only screen and (max-width: 1020px) {
   .CardMain {
-    // margin: 3rem 3rem;
+    margin: 3rem 3rem;
+    width: auto;
+
+    .profileSection {
+      .profiler_Name {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        .name_Heading {
+          margin: auto;
+          font-size: 16px;
+        }
+
+        div {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+
+          .active_Status {
+            span {
+              margin-left: 0%;
+            }
+          }
+        }
+      }
+    }
+
+    .infoSection {
+      .info_Details {
+        height: 80%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        .info_Tag_Section {
+          grid-template-columns: repeat(3, auto);
+
+          .info_Tag {
+            svg {
+              height: 16px;
+              width: 16px;
+            }
+          }
+        }
+        .card_Button_Wrapper {
+          width: 100%;
+          display: flex;
+          gap: 20px;
+          margin-top: 10px;
+          flex-wrap: wrap;
+          .button_section {
+            Button {
+              font-size: 11px;
+
+              svg {
+                height: 15px;
+                width: 15px;
+              }
+            }
+          }
+
+          .profileMatchSection {
+            margin: auto;
+            margin-right: 0;
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 881px) and (min-width: 768px) {
+  .CardMain {
+    margin: 3rem 1rem;
+    width: auto;
 
     .profileSection {
       .profiler_Name {
@@ -325,7 +400,8 @@
 
 @media only screen and (max-width: 767px) and (min-width: 601px) {
   .CardMain {
-    margin: 3rem 5rem;
+    margin: 3rem 3rem;
+    width: auto;
 
     .profileSection {
       flex-basis: 30%;
@@ -404,6 +480,7 @@
   .CardMain {
     flex-direction: column;
     margin: 1rem 1rem;
+    width: auto;
 
     .profileSection {
       flex-direction: row;
@@ -493,6 +570,7 @@
   .CardMain {
     flex-direction: column;
     margin: 3rem 1rem;
+    width: auto;
 
     .profileSection {
       flex-direction: column;
