--- a/components/ShortVisitorProfile/ShortVisitorProfile.module.scss
+++ b/components/ShortVisitorProfile/ShortVisitorProfile.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/constants.scss";
 
 .cardWrapper {
-  margin: 3rem auto;
+  // margin: 3rem auto;
   width: 75%;
   min-height: 20rem;
 
@@ -10,7 +10,7 @@
     width: 100%;
     background-color: #fff;
     position: absolute;
-    top: -7rem;
+    top: -4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
