--- a/pages/ShowInterest/Components/Interest.module.scss
+++ b/pages/ShowInterest/Components/Interest.module.scss
@@ -11,21 +11,16 @@
   background: rgb(231, 230, 230);
 }
 
-// .card_container_main {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   border-radius: 5px;
-//   width: 75%;
-//   margin: auto;
-//   max-width: 1000px;
-// }
-
 .flexrowMar {
   flex-direction: row;
   margin: 3rem auto;
   gap: 2rem;
-
+}
+.componentMain {
+  margin-top: 7rem;
+}
+.componentMainData {
+  margin-top: 0rem;
 }
 
 @media only screen and (max-width: 1023px) {
